--- a/quiz_app/templates/quiz_app/guest_base.html
+++ b/quiz_app/templates/quiz_app/guest_base.html
@@ -87,7 +87,8 @@
         {% if messages %}
             <div class="container" style="max-width: 500px;">
                 {% for message in messages %}
-                    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                    {# THÊM CLASS 'text-white' VÀO ĐÂY #}
+                    <div class="alert alert-{{ message.tags }} text-white alert-dismissible fade show" role="alert">
                         {{ message }}
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
